--- a/www/features.html
+++ b/www/features.html
@@ -68,7 +68,7 @@
             <h1>Features</h1>
             
             <p>
-                VisualVM is a tool to monitor and troubleshoot Java applications. It runs on Sun JDK 6, but is able to monitor applications running on JDK 1.4 and higher. It utilizes
+                VisualVM is a tool to monitor and troubleshoot Java applications. It runs on Oracle/Sun JDK 6, but is able to monitor applications running on JDK 1.4 and higher. It utilizes
                 various available technologies like jvmstat, JMX, the Serviceability Agent (SA), and the Attach API to get the data and automatically uses the fastest and most lightweight technology
                 to impose minimal overhead on monitored applications.
             </p>
