--- a/www/news.html
+++ b/www/news.html
@@ -72,6 +72,10 @@
             <h3>News</h3>
             <div id="news">
 
+                <p><span class="news_date">February 26th, 2010:</span> Thread Dump Analyzer plugin has been updated on the VisualVM 1.2.2 Plugin Center to version 2.2.
+                    Detailed information can be found in the <a href="http://www.jroller.com/dumpster/entry/tda_2_2_release">TDA 2.2 release announcement</a>.
+                </p>
+
                 <p><span class="news_date">January 13th, 2010:</span> JDK 6 Update 18 released, it contains Java VisualVM tool
                     based on the VisualVM 1.2.1. Latest Sun JDK 6 update can be downloaded
                     <a href="http://java.sun.com/javase/downloads/index.jsp">here</a>.
