--- a/www/releases.html
+++ b/www/releases.html
@@ -77,9 +77,20 @@
                 <center style="margin-top: 15px; margin-bottom: 15px;">
                     <table id="reltable" border="1">
                         <tr><th><b>VisualVM</b></th><th><b>Corresponding Java&nbsp;VisualVM<br></b></th></tr>
+
                         <tr>
                             <td>
-                                <div><b>VisualVM 1.2.2</b><br><small style="margin-left: 10px;">Released: January 6th, 2010, <a href="relnotes.html">Release Notes</a></small></div>
+                                <div><b>VisualVM 1.3</b><br><small style="margin-left: 10px;">Released: July 26th, 2010, <a href="https://visualvm.dev.java.net/files/documents/7163/151728/visualvm_13.zip">Download</a> (<a href="https://visualvm.dev.java.net/files/documents/7163/151730/visualvm_13-ml.zip">ml</a>), <a href="relnotes.html">Release Notes</a></small></div>
+                            </td>
+
+                            <td>
+                                <div>not released yet</div>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>
+                                <div><b>VisualVM 1.2.2</b><br><small style="margin-left: 10px;">Released: January 6th, 2010, <a href="https://visualvm.dev.java.net/files/documents/7163/146709/visualvm_122.zip">Download</a> (<a href="https://visualvm.dev.java.net/files/documents/7163/146710/visualvm_122-ml.zip">ml</a>), <a href="relnotes122.html">Release Notes</a></small></div>
                             </td>
 
                             <td>
@@ -89,7 +100,7 @@
 
                         <tr>
                             <td>
-                                <div><b>VisualVM 1.2.1</b><br><small style="margin-left: 10px;">Released: November 9th, 2009, <a href="relnotes121.html">Release Notes</a></small></div>
+                                <div><b>VisualVM 1.2.1</b><br><small style="margin-left: 10px;">Released: November 9th, 2009, <a href="https://visualvm.dev.java.net/files/documents/7163/145165/visualvm_121.zip">Download</a> (<a href="https://visualvm.dev.java.net/files/documents/7163/145166/visualvm_121-ml.zip">ml</a>), <a href="relnotes121.html">Release Notes</a></small></div>
                             </td>
 
                             <td>
@@ -103,7 +114,7 @@
 
                         <tr>
                             <td>
-                                <div><b>VisualVM 1.2</b><br><small style="margin-left: 10px;">Released: October 21st, 2009, <a href="relnotes12.html">Release Notes</a></small></div>
+                                <div><b>VisualVM 1.2</b><br><small style="margin-left: 10px;">Released: October 21st, 2009, <a href="https://visualvm.dev.java.net/files/documents/7163/144406/visualvm_12.zip">Download</a> (<a href="https://visualvm.dev.java.net/files/documents/7163/144407/visualvm_12-ml.zip">ml</a>), <a href="relnotes12.html">Release Notes</a></small></div>
                             </td>
 
                             <td>
@@ -113,7 +124,7 @@
 
                         <tr>
                             <td>
-                                <div><b>VisualVM 1.1.1</b><br><small style="margin-left: 10px;">Released: February 17th, 2009, <a href="relnotes111.html">Release Notes</a></small></div>
+                                <div><b>VisualVM 1.1.1</b><br><small style="margin-left: 10px;">Released: February 17th, 2009, <a href="https://visualvm.dev.java.net/files/documents/7163/127064/visualvm_111.zip">Download</a> (<a href="https://visualvm.dev.java.net/files/documents/7163/131458/visualvm_111-ml.zip">ml</a>), <a href="relnotes111.html">Release Notes</a></small></div>
                             </td>
 
                             <td>
@@ -129,7 +140,7 @@
 
                         <tr>
                             <td>
-                                <div><b>VisualVM 1.1</b><br><small style="margin-left: 10px;">Released: December 8th, 2008, <a href="relnotes11.html">Release Notes</a></small></div>
+                                <div><b>VisualVM 1.1</b><br><small style="margin-left: 10px;">Released: December 8th, 2008, <a href="https://visualvm.dev.java.net/files/documents/7163/119696/visualvm_11.zip">Download</a>, <a href="relnotes11.html">Release Notes</a></small></div>
                             </td>
 
                             <td>
@@ -139,7 +150,7 @@
 
                         <tr>
                             <td>
-                                <div><b>VisualVM 1.0.1</b><br><small style="margin-left: 10px;">Released: September 5th, 2008, <a href="relnotes101.html">Release Notes</a></small></div>
+                                <div><b>VisualVM 1.0.1</b><br><small style="margin-left: 10px;">Released: September 5th, 2008, <a href="https://visualvm.dev.java.net/files/documents/7163/109830/visualvm_101.zip">Download</a>, <a href="relnotes101.html">Release Notes</a></small></div>
                             </td>
 
                             <td>
@@ -153,7 +164,7 @@
 
                         <tr>
                             <td>
-                                <div><b>VisualVM 1.0</b><br><small style="margin-left: 10px;">Released: July 8th, 2008, <a href="relnotes10.html">Release Notes</a></small></div>
+                                <div><b>VisualVM 1.0</b><br><small style="margin-left: 10px;">Released: July 8th, 2008, <a href="https://visualvm.dev.java.net/files/documents/7163/102851/visualvm_10.zip">Download</a>, <a href="relnotes10.html">Release Notes</a></small></div>
                             </td>
                             
                             <td>
