--- a/www/index.html
+++ b/www/index.html
@@ -50,6 +50,13 @@
             <div id="news" style="margin-bottom: 10px;">
                 <!-- Please always display 3 items here. The item to be removed should be archived on news.html -->
 
+                <p><span class="news_date">July 26th, 2010:</span> VisualVM 1.3 released. It incorporates the Sampler plugin into the core tool,
+                    enables taking remote heap dumps, monitoring remote hosts, detailed application analysis using the Tracer plugin and
+                    much more. The tool can be downloaded from the <a href="download.html">Download</a> page, sources are available in
+                    <a href="https://visualvm.dev.java.net/source/browse/visualvm/visualvm/?only_with_tag=release13"><code>release13</code></a>
+                    branch. See the <a href="relnotes.html">Release Notes</a> for more information.
+                </p>
+
                 <p><span class="news_date">July 7th, 2010:</span> JDK 6 Update 21 released, it contains Java VisualVM tool
                     based on the VisualVM 1.2.2. Latest JDK 6 update from Oracle can be downloaded
                     <a href="http://java.sun.com/javase/downloads/index.jsp">here</a>.
@@ -59,10 +66,6 @@
                     has been released on VisualVM 1.2.2 Plugins Center. SA Plugin makes Serviceability Agent's features and 
                     utilities available in VisualVM. Serviceability Agent is an out-of-process snapshot debugger for Hotspot 
                     Java Virtual Machine. For detailed description visit the <a href="https://visualvm.dev.java.net/saplugin.html">SA plugin page</a>.
-                </p>
-
-                <p><span class="news_date">February 26th, 2010:</span> Thread Dump Analyzer plugin has been updated on the VisualVM 1.2.2 Plugin Center to version 2.2.
-                    Detailed information can be found in the <a href="http://www.jroller.com/dumpster/entry/tda_2_2_release">TDA 2.2 release announcement</a>.
                 </p>
 
                 <p class="previous_link"><a href="news.html">news archive</a>
@@ -124,7 +127,7 @@
             <a href="build.html">Build Guide</a>
             <a href="http://java.dzone.com/announcements/visualvm-sample-collection-10">Sample Projects</a>
             <a href="https://visualvm.dev.java.net/api-quickstart.html">Developer Documentation</a>
-            <a href="nonav/apidocs/12/index.html">API Documentation</a>
+            <a href="nonav/apidocs/13/index.html">API Documentation</a>
         </div>
 
     </div>
