--- a/www/plugincenters.html
+++ b/www/plugincenters.html
@@ -66,7 +66,7 @@
 
         td.plugincenter {
             width: 70%;
-            font-size: small;
+            font-size: small !important;
         }
 
     </style>
@@ -103,7 +103,7 @@
                         <td><table class="plugcentable" border="1">
                             <tr><th colspan="2"><b>VisualVM</b></th></tr>
 
-                            <tr style="font-size: small;"><th><b>Release</b></th><th><b>Plugin Center<br></b></th></tr>
+                            <tr><th><b>Release</b></th><th><b>Plugin Center<br></b></th></tr>
 
                             <tr>
                                 <td class="release">
@@ -182,7 +182,7 @@
                         <td><table class="plugcentable" border="1">
                             <tr><th colspan="2"><b>Java VisualVM</b></th></tr>
 
-                            <tr style="font-size: small;"><th><b>Release</b></th><th><b>Plugin Center<br></b></th></tr>
+                            <tr><th><b>Release</b></th><th><b>Plugin Center<br></b></th></tr>
 
                             <tr>
                                 <td class="release">
