Plugin Centers Table, formatting v2
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2779 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/plugincenters.html
+++ b/www/plugincenters.html
@@ -66,7 +66,11 @@
 
         td.plugincenter {
             width: 70%;
-            font-size: small !important;
+            font-size: 11px !important;
+        }
+
+        th.subheader b {
+            font-size: 11px !important;
         }
 
     </style>
@@ -103,7 +107,7 @@
                         <td><table class="plugcentable" border="1">
                             <tr><th colspan="2"><b>VisualVM</b></th></tr>
 
-                            <tr><th><b>Release</b></th><th><b>Plugin Center<br></b></th></tr>
+                            <tr><th class="subheader"><b>Release</b></th><th class="subheader"><b>Plugin Center<br></b></th></tr>
 
                             <tr>
                                 <td class="release">
@@ -182,7 +186,7 @@
                         <td><table class="plugcentable" border="1">
                             <tr><th colspan="2"><b>Java VisualVM</b></th></tr>
 
-                            <tr><th><b>Release</b></th><th><b>Plugin Center<br></b></th></tr>
+                            <tr><th class="subheader"><b>Release</b></th><th class="subheader"><b>Plugin Center<br></b></th></tr>
 
                             <tr>
                                 <td class="release">
