Plugin Centers Table, formatting v3
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2780 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/plugincenters.html
+++ b/www/plugincenters.html
@@ -66,11 +66,6 @@
 
         td.plugincenter {
             width: 70%;
-            font-size: 11px !important;
-        }
-
-        th.subheader b {
-            font-size: 11px !important;
         }
 
     </style>
@@ -107,7 +102,7 @@
                         <td><table class="plugcentable" border="1">
                             <tr><th colspan="2"><b>VisualVM</b></th></tr>
 
-                            <tr><th class="subheader"><b>Release</b></th><th class="subheader"><b>Plugin Center<br></b></th></tr>
+                            <tr><th><b><small>Release</small></b></th><th><b><small>Plugin Center</small><br></b></th></tr>
 
                             <tr>
                                 <td class="release">
@@ -115,7 +110,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div>coming soon</div>
+                                    <div><small>coming soon</small></div>
                                 </td>
                             </tr>
 
@@ -125,7 +120,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release122/updates.xml">https://visualvm.dev.java.net/uc/release122/updates.xml.gz</a></div>
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release122/updates.xml">https://visualvm.dev.java.net/uc/release122/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -137,7 +132,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release12/updates.xml">https://visualvm.dev.java.net/uc/release12/updates.xml.gz</a></div>
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release12/updates.xml">https://visualvm.dev.java.net/uc/release12/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -147,7 +142,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release111/updates.xml">https://visualvm.dev.java.net/uc/release111/updates.xml.gz</a></div>
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release111/updates.xml">https://visualvm.dev.java.net/uc/release111/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -157,7 +152,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release11/updates.xml">https://visualvm.dev.java.net/uc/release11/updates.xml.gz</a></div>
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release11/updates.xml">https://visualvm.dev.java.net/uc/release11/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -167,7 +162,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release101/updates.xml">https://visualvm.dev.java.net/uc/release101/updates.xml.gz</a></div>
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release101/updates.xml">https://visualvm.dev.java.net/uc/release101/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -177,7 +172,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release10/updates.xml">https://visualvm.dev.java.net/uc/release10/updates.xml.gz</a></div>
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release10/updates.xml">https://visualvm.dev.java.net/uc/release10/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -186,7 +181,7 @@
                         <td><table class="plugcentable" border="1">
                             <tr><th colspan="2"><b>Java VisualVM</b></th></tr>
 
-                            <tr><th class="subheader"><b>Release</b></th><th class="subheader"><b>Plugin Center<br></b></th></tr>
+                            <tr><th><b><small>Release</small></b></th><th><b><small>Plugin Center</small><br></b></th></tr>
 
                             <tr>
                                 <td class="release">
@@ -194,7 +189,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/6u20/updates.xml">https://visualvm.dev.java.net/uc/6u20/updates.xml.gz</a></div>
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/6u20/updates.xml">https://visualvm.dev.java.net/uc/6u20/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -208,7 +203,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/6u18/updates.xml">https://visualvm.dev.java.net/uc/6u18/updates.xml.gz</a></div>
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/6u18/updates.xml">https://visualvm.dev.java.net/uc/6u18/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -224,7 +219,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/6u14/updates.xml">https://visualvm.dev.java.net/uc/6u14/updates.xml.gz</a></div>
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/6u14/updates.xml">https://visualvm.dev.java.net/uc/6u14/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -238,7 +233,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/6u11/updates.xml">https://visualvm.dev.java.net/uc/6u11/updates.xml.gz</a></div>
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/6u11/updates.xml">https://visualvm.dev.java.net/uc/6u11/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -250,7 +245,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/6u7/updates.xml">https://visualvm.dev.java.net/uc/6u7/updates.xml.gz</a></div>
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/6u7/updates.xml">https://visualvm.dev.java.net/uc/6u7/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
