--- a/www/plugincenters.html
+++ b/www/plugincenters.html
@@ -83,7 +83,8 @@
             
             <p>
                 This document provides contents of Plugin Centers of all released VisualVM and Java VisualVM versions. The plugins can be downloaded
-                as <code>.nbm</code> files and manually installed into VisualVM using Tools | Plugins | Downloaded.
+                as <code>.nbm</code> files and manually installed into VisualVM using Tools | Plugins | Downloaded. To get the plugin file,
+                click the Plugin Center descriptor link for your VisualVM version and choose the requested plugin.
             </p>
 
             <p style="margin-bottom: 15px;">
