Plugin Centers Table, formatting v4
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2782 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/plugincenters.html
+++ b/www/plugincenters.html
@@ -179,6 +179,8 @@
 
                         </table></td>
 
+                        <td>&nbsp;</td>
+
                         <td><table class="plugcentable" border="1">
                             <tr><th colspan="2"><b>Java VisualVM</b></th></tr>
 
