Plugin Centers Table, improved description
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2783 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/plugincenters.html
+++ b/www/plugincenters.html
@@ -84,7 +84,8 @@
             <p>
                 This document provides contents of Plugin Centers of all released VisualVM and Java VisualVM versions. The plugins can be downloaded
                 as <code>.nbm</code> files and manually installed into VisualVM using Tools | Plugins | Downloaded. To get the plugin file,
-                click the Plugin Center descriptor link for your VisualVM version and choose the requested plugin.
+                click the Plugin Center descriptor link for your VisualVM version and choose the appropriate plugin. You may need to download additional
+                plugins to satisfy the choosen plugin's dependencies.
             </p>
 
             <p style="margin-bottom: 15px;">
