Plugin Centers -> Plugins Centers, v2
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2785 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/pluginscenters.html
+++ b/www/pluginscenters.html
@@ -104,7 +104,7 @@
                         <td><table class="plugcentable" border="1">
                             <tr><th colspan="2"><b>VisualVM</b></th></tr>
 
-                            <tr><th><b><small>Release</small></b></th><th><b><small>Plugin Center</small><br></b></th></tr>
+                            <tr><th><b><small>Release</small></b></th><th><b><small>Plugins Center</small><br></b></th></tr>
 
                             <tr>
                                 <td class="release">
@@ -185,7 +185,7 @@
                         <td><table class="plugcentable" border="1">
                             <tr><th colspan="2"><b>Java VisualVM</b></th></tr>
 
-                            <tr><th><b><small>Release</small></b></th><th><b><small>Plugin Center</small><br></b></th></tr>
+                            <tr><th><b><small>Release</small></b></th><th><b><small>Plugins Center</small><br></b></th></tr>
 
                             <tr>
                                 <td class="release">
