Slightly reformatted Troubleshooting Guide, v3
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2790 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/troubleshooting_new.html
+++ b/www/troubleshooting_new.html
@@ -214,7 +214,7 @@
         <div>
             <a href="#starting">Problems With Starting VisualVM</a>
             <a href="#using">Problems With Using VisualVM</a>
-            <a href="#plugins">Problems With Using VisualVM</a>
+            <a href="#plugins">Problems With VisualVM Plugins</a>
         </div>
 
         <h3>Quick Links</h3>
