Publishing list of Plugins Centers
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2791 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/pluginscenters.html
+++ b/www/pluginscenters.html
@@ -112,7 +112,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small>coming soon</small></div>
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release13/updates.xml">https://visualvm.dev.java.net/uc/release13/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
