--- a/www/plugins.html
+++ b/www/plugins.html
@@ -67,6 +67,11 @@
                     <li>Switch to Available Plugins tab and select the plugin you want to install</li>
                     <li>Click the Install button, review and accept plugin license and wait for the plugin to be downloaded and installed</li>
                 </ol>
+
+                <p>
+                    <small><b>Note: </b>if you have problems with installing plugins from VisualVM Plugins Center (no internet access, proxy restrictions etc.),
+                        you may download the plugin files manually from the <a href="pluginscenters.html">Plugins Centers</a> page.</small>
+                </p>
             </div>
             <div style="padding-top: 5px;">    
                 <p><b>Some third-party plugins need to be installed from a downloaded .nbm file:</b>
