--- a/www/troubleshooting.html
+++ b/www/troubleshooting.html
@@ -31,6 +31,16 @@
             padding-bottom: 3px;
         }
 
+        h4 {
+            margin-bottom: 5px !important;
+            padding-bottom: 5px !important;
+        }
+
+        h4 + p {
+            margin-top: 0px !important;
+            padding-top: 0px !important;
+        }
+
     </style>
 
 </head>
