--- a/www/troubleshooting.html
+++ b/www/troubleshooting.html
@@ -41,6 +41,11 @@
             padding-top: 0px !important;
         }
 
+        h4 + p + p {
+            margin-top: 0px !important;
+            padding-top: 0px !important;
+        }
+
     </style>
 
 </head>
