Plugins: reworded link to Plugins Centers
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2796 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/plugins.html
+++ b/www/plugins.html
@@ -69,8 +69,7 @@
                 </ol>
 
                 <p>
-                    <small><b>Note: </b>if you have problems with installing plugins from VisualVM Plugins Center (no internet access, proxy restrictions etc.),
-                        you may download the plugin files manually from the <a href="pluginscenters.html">Plugins Centers</a> page.</small>
+                    <small><b>Note: </b>plugins for offline VisualVM installations can be manually downloaded from the <a href="pluginscenters.html">Plugins Centers</a> page.</small>
                 </p>
             </div>
             <div style="padding-top: 5px;">    
