--- a/www/plugins.html
+++ b/www/plugins.html
@@ -30,6 +30,11 @@
             ol li, ul li {
                 padding-bottom: 3px;
             }
+
+            h4 {
+                margin-top: 5px !important;
+                padding-top: 5px !important;
+            }
             
         </style>
         
