--- a/www/plugins.html
+++ b/www/plugins.html
@@ -32,8 +32,10 @@
             }
 
             h4 {
-                margin-top: 5px !important;
-                padding-top: 5px !important;
+                margin-top: 10px !important;
+                padding-top: 10px !important;
+                margin-bottom: 8px !important;
+                padding-bottom: 8px !important;
             }
             
         </style>
