--- a/www/index.html
+++ b/www/index.html
@@ -132,6 +132,12 @@
 
     </div>
 
+    <div id="contents_links">
+
+        <a href="http://www.twitter.com/visualvm"><img src="http://twitter-badges.s3.amazonaws.com/follow_us-b.png" alt="Follow visualvm on Twitter"/></a>
+
+    </div>
+
     <div id="contents_clear"></div>
 
 </div>
