--- a/www/index.html
+++ b/www/index.html
@@ -130,11 +130,9 @@
             <a href="nonav/apidocs/13/index.html">API Documentation</a>
         </div>
 
-    </div>
-
-    <div id="contents_links">
-
-        <a href="http://www.twitter.com/visualvm"><img src="http://twitter-badges.s3.amazonaws.com/follow_us-b.png" alt="Follow visualvm on Twitter"/></a>
+        <p>
+            <a href="http://www.twitter.com/visualvm"><img src="http://twitter-badges.s3.amazonaws.com/follow_us-b.png" alt="Follow VisualVM on Twitter"/></a>
+        </p>
 
     </div>
 
