--- a/www/index.html
+++ b/www/index.html
@@ -130,7 +130,7 @@
             <a href="nonav/apidocs/13/index.html">API Documentation</a>
         </div>
 
-        <p>
+        <p id="index_links">
             <a href="http://www.twitter.com/visualvm"><img src="http://twitter-badges.s3.amazonaws.com/follow_us-b.png" alt="Follow VisualVM on Twitter"/></a>
         </p>
 
