--- a/www/index.html
+++ b/www/index.html
@@ -131,7 +131,7 @@
         </div>
 
         <p id="index_links">
-            <a href="http://www.twitter.com/visualvm"><img src="http://twitter-badges.s3.amazonaws.com/follow_us-b.png" alt="Follow VisualVM on Twitter"/></a>
+            <a href="http://www.twitter.com/visualvm"><img src="images/follow_us-b.png" alt="Follow VisualVM on Twitter"/></a>
         </p>
 
     </div>
