--- a/www/index.html
+++ b/www/index.html
@@ -130,6 +130,10 @@
             <a href="nonav/apidocs/13/index.html">API Documentation</a>
         </div>
 
+        <p id="index_links">
+            <a href="http://www.twitter.com/visualvm"><img src="images/follow_us-b.png" alt="Follow VisualVM on Twitter"/></a>
+        </p>
+
     </div>
 
     <div id="contents_clear"></div>
