Twitter link rev., v3
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2822 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/index.html
+++ b/www/index.html
@@ -131,7 +131,7 @@
         </div>
 
         <p id="index_links">
-            <a href="http://www.twitter.com/visualvm"><img src="images/follow_us-b.png" alt="Follow VisualVM on Twitter"/></a>
+            <a href="http://www.twitter.com/visualvm" target="_blank"><img src="images/follow_us-b.png" alt="Follow VisualVM on Twitter"/></a>
         </p>
 
     </div>
