--- a/www/news.html
+++ b/www/news.html
@@ -72,6 +72,12 @@
             <h3>News</h3>
             <div id="news">
 
+                <p><span class="news_date">March 25th, 2010:</span> SA plugin
+                    has been released on VisualVM 1.2.2 Plugins Center. SA Plugin makes Serviceability Agent's features and
+                    utilities available in VisualVM. Serviceability Agent is an out-of-process snapshot debugger for Hotspot
+                    Java Virtual Machine. For detailed description visit the <a href="https://visualvm.dev.java.net/saplugin.html">SA plugin page</a>.
+                </p>
+
                 <p><span class="news_date">February 26th, 2010:</span> Thread Dump Analyzer plugin has been updated on the VisualVM 1.2.2 Plugin Center to version 2.2.
                     Detailed information can be found in the <a href="http://www.jroller.com/dumpster/entry/tda_2_2_release">TDA 2.2 release announcement</a>.
                 </p>
