--- a/www/index.html
+++ b/www/index.html
@@ -50,6 +50,13 @@
             <div id="news" style="margin-bottom: 10px;">
                 <!-- Please always display 3 items here. The item to be removed should be archived on news.html -->
 
+                <p><span class="news_date">September 7th, 2010:</span> VisualVM Harness 1.0 has been released to
+                    simplify the build and packaging of OpenJDK. As of IcedTea6 1.9, VisualVM build support has been
+                    replaced by the VisualVM Harness covering both VisualVM 1.2.2 (built on NetBeans Platform 6.8)
+                    and VisualVM 1.3 (built on NetBeans Platform 6.9). Details are available in
+                    <a href="http://mail.openjdk.java.net/pipermail/distro-pkg-dev/2010-September/010208.html">this announcement</a>.
+                </p>
+
                 <p><span class="news_date">July 26th, 2010:</span> VisualVM 1.3 released. It incorporates the Sampler plugin into the core tool,
                     enables taking remote heap dumps, monitoring remote hosts, detailed application analysis using the Tracer plugin and
                     much more. The tool can be downloaded from the <a href="download.html">Download</a> page, sources are available in
@@ -60,12 +67,6 @@
                 <p><span class="news_date">July 7th, 2010:</span> JDK 6 Update 21 released, it contains Java VisualVM tool
                     based on the VisualVM 1.2.2. Latest JDK 6 update from Oracle can be downloaded
                     <a href="http://java.sun.com/javase/downloads/index.jsp">here</a>.
-                </p>
-
-                <p><span class="news_date">March 25th, 2010:</span> SA plugin
-                    has been released on VisualVM 1.2.2 Plugins Center. SA Plugin makes Serviceability Agent's features and 
-                    utilities available in VisualVM. Serviceability Agent is an out-of-process snapshot debugger for Hotspot 
-                    Java Virtual Machine. For detailed description visit the <a href="https://visualvm.dev.java.net/saplugin.html">SA plugin page</a>.
                 </p>
 
                 <p class="previous_link"><a href="news.html">news archive</a>
