--- a/www/news.html
+++ b/www/news.html
@@ -72,6 +72,11 @@
             <h3>News</h3>
             <div id="news">
 
+                <p><span class="news_date">July 7th, 2010:</span> JDK 6 Update 21 released, it contains Java VisualVM tool
+                    based on the VisualVM 1.2.2. Latest JDK 6 update from Oracle can be downloaded
+                    <a href="http://java.sun.com/javase/downloads/index.jsp">here</a>.
+                </p>
+
                 <p><span class="news_date">March 25th, 2010:</span> SA plugin
                     has been released on VisualVM 1.2.2 Plugins Center. SA Plugin makes Serviceability Agent's features and
                     utilities available in VisualVM. Serviceability Agent is an out-of-process snapshot debugger for Hotspot
