--- a/www/releases.html
+++ b/www/releases.html
@@ -80,11 +80,21 @@
 
                         <tr>
                             <td>
-                                <div><b>VisualVM 1.3</b><br><small style="margin-left: 10px;">Released: July 26th, 2010, <a href="https://visualvm.dev.java.net/files/documents/7163/151728/visualvm_13.zip">Download</a> (<a href="https://visualvm.dev.java.net/files/documents/7163/151730/visualvm_13-ml.zip">ml</a>), <a href="relnotes.html">Release Notes</a></small></div>
+                                <div><b>VisualVM 1.3.1</b><br><small style="margin-left: 10px;">Released: September 20th, 2010, <a href="https://visualvm.dev.java.net/files/documents/7163/152922/visualvm_131.zip">Download</a> (<a href="https://visualvm.dev.java.net/files/documents/7163/152923/visualvm_131-ml.zip">ml</a>), <a href="relnotes.html">Release Notes</a></small></div>
                             </td>
 
                             <td>
                                 <div>not released yet</div>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>
+                                <div><b>VisualVM 1.3</b><br><small style="margin-left: 10px;">Released: July 26th, 2010, <a href="https://visualvm.dev.java.net/files/documents/7163/151728/visualvm_13.zip">Download</a> (<a href="https://visualvm.dev.java.net/files/documents/7163/151730/visualvm_13-ml.zip">ml</a>), <a href="relnotes13.html">Release Notes</a></small></div>
+                            </td>
+
+                            <td>
+                                <div>not released</div>
                             </td>
                         </tr>
 
