--- a/www/relnotes13.html
+++ b/www/relnotes13.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-    <title>VisualVM 1.3.1 Release Notes</title>
+    <title>VisualVM 1.3 Release Notes</title>
 
     <style>
 
@@ -42,14 +42,14 @@
     <div id="contents_contents">
         <div id="contents_main">
 
-            <h1>VisualVM 1.3.1 Release Notes</h1>
+            <h1>VisualVM 1.3 Release Notes</h1>
 
             <p>
                 VisualVM is a visual tool integrating several commandline JDK tools and lightweight profiling capabilities. Designed for both production and development time use, it further enhances the capability of monitoring and performance analysis for the Java SE platform.
             </p>
 
             <p style="margin-bottom: 15px;">
-                VisualVM 1.3.1 is a bugfix release based on VisualVM 1.3. See the <a href="#changes">Changes In 1.3.1</a> section for list of changes and bugfixes since the VisualVM 1.3.
+                VisualVM 1.3 is a stable release following after VisualVM 1.2.2. See the <a href="#changes">Changes In 1.3</a> section for list of changes and bugfixes since the VisualVM 1.2.2.
                 See the <a href="releases.html">Releases Overview</a> page for detailed overview of all VisualVM and Java VisualVM releases.
             </p>
 
@@ -98,82 +98,6 @@
             </div>
 
             <a name="changes"></a>
-            <h3>Changes In 1.3.1</h3>
-            <div>
-                <p style="margin-top: 5px;">
-                    <b>Features and enhancements:</b><br>
-                    <ul>
-                        <li>Added Java version and vendor information to the application Overview view
-                        </li>
-
-                        <li>Built on NetBeans Platform & profiler 6.9.1
-                        </li>
-                    </ul>
-                </p>
-
-                <p style="margin-top: 5px; margin-bottom: 10px;">
-                    <b>Fixed bugs:</b><br>
-                    <ul>
-                        <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=397">Issue 397</a>: Overview tab does not have 'Details' and 'Saved data'
-                        </li>
-
-                        <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=398">Issue 398</a>: BTrace probes are enabled for remote application
-                        </li>
-
-                        <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=403">Issue 403</a>: [I18N] Show/Hide section checkbox tooltip not from bundle
-                        </li>
-
-                        <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=405">Issue 405</a>: UnsupportedOperationException when opening remote application
-                        </li>
-
-                        <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=406">Issue 406</a>: Confusing message in HeapWalker
-                        </li>
-
-                        <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=407">Issue 407</a>: Bad Tracer charts quality
-                        </li>
-                    </ul>
-                </p>
-
-                <!--p style="margin-top: 5px; margin-bottom: 10px;">
-                    <b>Fixed bugs:</b> <a href="https://visualvm.dev.java.net/issues/buglist.cgi?Submit+query=Submit+query&issue_type=DEFECT&component=visualvm&resolution=FIXED&target_milestone=1.3.1&email1=&emailtype1=exact&emailassigned_to1=1&email2=&emailtype2=exact&emailreporter2=1&issueidtype=include&issue_id=&changedin=&votes=&chfield=creation_ts&chfieldfrom=&chfieldto=Now&chfieldvalue=&short_desc=&short_desc_type=fulltext&long_desc=&long_desc_type=fulltext&issue_file_loc=&issue_file_loc_type=fulltext&status_whiteboard=&status_whiteboard_type=fulltext&field0-0-0=noop&type0-0-0=noop&value0-0-0=&cmdtype=doit&order=Reuse+same+sort+as+last+time">IssueTracker query</a>.
-                </p-->
-            </div>
-
-            <a name="known_problems"></a>
-            <h3>Known Problems</h3>
-            <div>
-                <ul>
-                    <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=224">Issue 224</a>: Cannot memory profile JBoss AS 4.2.3.GA
-                    </li>
-
-                    <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=148">Issue 148</a>: VisualVM hangs when lost remote connection
-                    </li>
-
-                    <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=120">Issue 120</a>: JMX application datasource cannot be reused on application restart
-                    </li>
-
-                    <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=72">Issue 72</a>: Running application sometimes not recognized
-                    </li>
-                </ul>
-
-                <p>
-                    <b>Warning:</b> due to a JDK bug taking heap dump may crash the target JVM if it's running JDK 6 Update 16+ using Concurrent Mark Sweep garbage collector (CMS). A workaround is to use a different GC (for example using <code>-XX:+UseParallelGC</code>). Similar problem seems to affect also the JDK 7 devbuilds.
-                </p>
-
-                <p style="margin-bottom: 15px;">To view all known problems please use this <a href="https://visualvm.dev.java.net/issues/buglist.cgi?Submit+query=Submit+query&issue_type=DEFECT&component=visualvm&subcomponent=code&issue_status=NEW&issue_status=STARTED&issue_status=REOPENED&email1=&emailtype1=exact&emailassigned_to1=1&email2=&emailtype2=exact&emailreporter2=1&issueidtype=include&issue_id=&changedin=&votes=&chfieldfrom=&chfieldto=Now&chfieldvalue=&short_desc=&short_desc_type=fulltext&long_desc=&long_desc_type=fulltext&issue_file_loc=&issue_file_loc_type=fulltext&status_whiteboard=&status_whiteboard_type=fulltext&field0-0-0=noop&type0-0-0=noop&value0-0-0=&cmdtype=doit&newqueryname=&order=Reuse+same+sort+as+last+time">IssueTracker query</a>.
-                </p>
-            </div>
-
-            <br>
-            <hr>
-            <hr>
-            <br>
-            <br>
-
-            <a name="changeshistory"></a>
-            <h2>History of Changes</h2>
-            <br>
-
             <h3>Changes In 1.3</h3>
             <div>
                 <p style="margin-top: 5px;">
@@ -273,6 +197,41 @@
                     <b>Fixed bugs:</b> <a href="https://visualvm.dev.java.net/issues/buglist.cgi?Submit+query=Submit+query&issue_type=DEFECT&component=visualvm&resolution=FIXED&target_milestone=1.3&email1=&emailtype1=exact&emailassigned_to1=1&email2=&emailtype2=exact&emailreporter2=1&issueidtype=include&issue_id=&changedin=&votes=&chfield=creation_ts&chfieldfrom=&chfieldto=Now&chfieldvalue=&short_desc=&short_desc_type=fulltext&long_desc=&long_desc_type=fulltext&issue_file_loc=&issue_file_loc_type=fulltext&status_whiteboard=&status_whiteboard_type=fulltext&field0-0-0=noop&type0-0-0=noop&value0-0-0=&cmdtype=doit&order=Reuse+same+sort+as+last+time">IssueTracker query</a>.
                 </p>
             </div>
+
+            <a name="known_problems"></a>
+            <h3>Known Problems</h3>
+            <div>
+                <ul>
+                    <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=224">Issue 224</a>: Cannot memory profile JBoss AS 4.2.3.GA
+                    </li>
+
+                    <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=148">Issue 148</a>: VisualVM hangs when lost remote connection
+                    </li>
+
+                    <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=120">Issue 120</a>: JMX application datasource cannot be reused on application restart
+                    </li>
+
+                    <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=72">Issue 72</a>: Running application sometimes not recognized
+                    </li>
+                </ul>
+
+                <p>
+                    <b>Warning:</b> due to a JDK bug taking heap dump may crash the target JVM if it's running JDK 6 Update 16+ using Concurrent Mark Sweep garbage collector (CMS). A workaround is to use a different GC (for example using <code>-XX:+UseParallelGC</code>). Similar problem seems to affect also the JDK 7 devbuilds.
+                </p>
+
+                <p style="margin-bottom: 15px;">To view all known problems please use this <a href="https://visualvm.dev.java.net/issues/buglist.cgi?Submit+query=Submit+query&issue_type=DEFECT&component=visualvm&subcomponent=code&issue_status=NEW&issue_status=STARTED&issue_status=REOPENED&email1=&emailtype1=exact&emailassigned_to1=1&email2=&emailtype2=exact&emailreporter2=1&issueidtype=include&issue_id=&changedin=&votes=&chfieldfrom=&chfieldto=Now&chfieldvalue=&short_desc=&short_desc_type=fulltext&long_desc=&long_desc_type=fulltext&issue_file_loc=&issue_file_loc_type=fulltext&status_whiteboard=&status_whiteboard_type=fulltext&field0-0-0=noop&type0-0-0=noop&value0-0-0=&cmdtype=doit&newqueryname=&order=Reuse+same+sort+as+last+time">IssueTracker query</a>.
+                </p>
+            </div>
+
+            <br>
+            <hr>
+            <hr>
+            <br>
+            <br>
+
+            <a name="changeshistory"></a>
+            <h2>History of Changes</h2>
+            <br>
 
             <h3>Changes In 1.2.2</h3>
             <div>
@@ -554,7 +513,7 @@
         <h3 class="first">On This Page</h3>
         <div>
             <a href="#system_requirements">System Requirements</a>
-            <a href="#changes">Changes In 1.3.1</a>
+            <a href="#changes">Changes In 1.2.2</a>
             <a href="#known_problems">Known Problems</a>
             <a href="#changeshistory">History of Changes</a>
         </div>
