--- a/www/index.html
+++ b/www/index.html
@@ -50,6 +50,12 @@
             <div id="news" style="margin-bottom: 10px;">
                 <!-- Please always display 3 items here. The item to be removed should be archived on news.html -->
 
+                <p><span class="news_date">September 20th, 2010:</span> VisualVM 1.3.1 released. This release upgrades the
+                    underlying framework to the NetBeans Platform 6.9.1 and delivers several bugfixes. The tool can be
+                    downloaded from the <a href="download.html">Download</a> page, sources are available in
+                    <a href="https://visualvm.dev.java.net/source/browse/visualvm/visualvm/?only_with_tag=release131"><code>release131</code></a> branch.
+                </p>
+
                 <p><span class="news_date">September 7th, 2010:</span> VisualVM Harness 1.0 has been released to
                     simplify the build and packaging of OpenJDK. As of IcedTea6 1.9, VisualVM build support has been
                     replaced by the VisualVM Harness covering both VisualVM 1.2.2 (built on NetBeans Platform 6.8)
@@ -62,11 +68,6 @@
                     much more. The tool can be downloaded from the <a href="download.html">Download</a> page, sources are available in
                     <a href="https://visualvm.dev.java.net/source/browse/visualvm/visualvm/?only_with_tag=release13"><code>release13</code></a>
                     branch. See the <a href="relnotes.html">Release Notes</a> for more information.
-                </p>
-
-                <p><span class="news_date">July 7th, 2010:</span> JDK 6 Update 21 released, it contains Java VisualVM tool
-                    based on the VisualVM 1.2.2. Latest JDK 6 update from Oracle can be downloaded
-                    <a href="http://java.sun.com/javase/downloads/index.jsp">here</a>.
                 </p>
 
                 <p class="previous_link"><a href="news.html">news archive</a>
